# octavia

./: .gitignore  README.md  news_class_light.py  news_classifier.py  news_classifier_notebook.ipynb  pyproject.toml  text_gen_light.py
data/: DT14.txt
octavia/: __init__.py  news_classifier.py  news_classifier_notebook.ipynb  test_libs.py  train.py
octavia/legacy/: __init__.py  old_models.py  old_train.py
octavia/utils/: __init__.py  generators.py  load_data.py  models.py  train.py
