[tool.poetry]
name = "octavia"
version = "0.1.0"
description = ""
authors = ["ZharovVsevolod <wsewolod@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.1.0%2Bcu118-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.16.0%2Bcu118-cp310-cp310-win_amd64.whl"}
torchtext = { url = "https://download.pytorch.org/whl/torchtext-0.16.0%2Bcpu-cp310-cp310-win_amd64.whl"}
wandb = "^0.15.12"
portalocker = ">=2.0.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
